# sigil

./: Makefile  pyproject.toml
.github/workflows/: tests.yml
examples/: a.py  example_linear_regression.py  linearRegression.py
src/sigil/: __init__.py
src/sigil/regression/: linear.py
tests/: test_add.py  test_linearRegression.py  test_linear_regression.py
